# ozirus-abstract

./: .gitignore  .latexmkrc  CITATION.cff  CODE_OF_CONDUCT.md  CONTACT.md  CONTRIBUTING.md  LICENSE-DOCS  Makefile  NOTICE  README.md  README.md.bak.20250829130500  continue_fix.sh  final_smoke.sh  final_smoke_report.json  install_ozirus_abstract.sh  integration_fix.sh  integration_fix_simple.sh  ozirus-core.bundle  ozirus_troubleshoot_guide.json  pyproject.toml  repo_smoke_report.json  repo_smoke_report.json.tmp  requirements.txt  resume_all.sh  resume_report.json  smoke_test.sh  validate_repo.sh  validate_repo_simple.sh
.github/workflows/: latex.yml  smoke.yml
demo/: docker-compose.yaml  sda_pcp_rgm_demo.py
docs/: PUT_YOUR_PDF_HERE.txt  index.html  index.md
examples/: curl.sh
ozirus-abstract/: .gitignore  README.md
ozirus-abstract/.github/workflows/: docs.yml  link-check-config.json
ozirus-core.mirror.git/: config  packed-refs
ozirus-core.mirror.git/objects/pack/: pack-e0d02869165e31adbfb1c4590c83458e85a96424.idx  pack-e0d02869165e31adbfb1c4590c83458e85a96424.pack
ozirus-core.mirror.git/refs/heads/: main
src/: Ozirus_Dilemma.tex
wheelhouse/: fastapi_cli-0.0.8-py3-none-any.whl  httptools-0.6.4-cp311-cp311-macosx_11_0_arm64.whl  pydantic_core-2.18.1-cp311-cp311-macosx_11_0_arm64.whl  rich_toolkit-0.15.0-py3-none-any.whl  typer-0.16.1-py3-none-any.whl  ujson-5.11.0-cp311-cp311-macosx_11_0_arm64.whl  uvicorn-0.30.0-py3-none-any.whl  uvloop-0.21.0-cp311-cp311-macosx_10_9_universal2.whl  watchfiles-1.1.0-cp311-cp311-macosx_11_0_arm64.whl
