[project]
name = "ozirus-dilemma"
version = "0.1.0"
description = "Offline workspace project with FastAPI and related dependencies"
authors = [
    {name = "Ozirus Morency",email = "ozirus@ozirus.ai"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (==0.111.0)",
    "uvicorn (==0.30.0)",
    "httpx (==0.27.0)",
    "cryptography (==43.0.0)",
    "pydantic (==2.7.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "7.4.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
